fissato errore di grammatica

--- a/ricevente1.tex
+++ b/ricevente1.tex
@@ -17,7 +17,7 @@ spiegare periodi, riceventi e i vari perché e percome...
 \end{abstract}
 \chapter*{Ricevente n°1}
 Tratterò un maschio italiano di 43 anni, alto \SI{1,75}{\centi\metre}
-per \SI{75}{\kilogram}. \`{E} un programmatore informatico ed ha iniziato da un
+per \SI{75}{\kilogram}. \`{E} un programmatore informatico e ha iniziato da un
 anno un percorso di dottorato di ricerca: è un lavoro principlamente sedentario.
 Non comunica particolari problemi fisici.
 
