adding some minor info

--- a/ricevente1.tex
+++ b/ricevente1.tex
@@ -18,7 +18,7 @@ spiegare periodi, riceventi e i vari perché e percome...
 \chapter*{Ricevente n°1}
 Tratterò un maschio italiano di 43 anni, alto \SI{1,75}{\centi\metre}
 per \SI{75}{\kilogram}. \`{E} un programmatore informatico e ha iniziato da un
-anno un percorso di dottorato di ricerca: è un lavoro principlamente sedentario.
+anno un percorso di dottorato di ricerca: è un lavoro quasi totalemnte sedentario (SI{1,75}{\hours\per\week).
 Non comunica particolari problemi fisici.
 
 \`{E} sportivo e allenato: climber, motociclista pratica mountain bike, corre
