--- a/ricevente1.tex
+++ b/ricevente1.tex
@@ -6,6 +6,7 @@
 \usepackage{enumitem}
 \newcommand{\RNum}[1]{\uppercase\expandafter{\romannumeral #1\relax}}
 \newcommand{\yang}{Yang}
+\newenvironment{acknowledgements} {\renewcommand\abstractname{Acknowledgements}\begin{abstract}} {\end{abstract}}
 
 \begin{document}
 \title{Tesi}
@@ -15,6 +16,12 @@
 \begin{abstract}
 spiegare periodi, riceventi e i vari perché e percome...
 \end{abstract}
+\begin{aknowledgements}
+Prima di tutti vorrei ringraziarti, Melissa perchè sei la mia compagna di vita in un viaggio di continue scoperte\ldots e anche la mia prima cavia di shiatsu!
+Poi Zefiro
+le mie compagne Chiara, Mer, Stella e il mio compagno di corso Dori
+i miei insegnanti: Irene, Loretta e Ruggero
+\end{aknowledgements}
 \chapter*{Ricevente n°1}
 Tratterò un maschio italiano di 43 anni, alto \SI{1,75}{\centi\metre}
 per \SI{75}{\kilogram}. \`{E} un programmatore informatico e ha iniziato da un
